# a11g-final-submission-s26-s26-t29-mind2matter

./: .gitignore  README.md
cloud_stack/: .env.example  .gitignore  README.md  docker-compose.yml
cloud_stack/ai-worker/: Dockerfile  requirements.txt
cloud_stack/ai-worker/app/: main.py
cloud_stack/mosquitto/: mosquitto.conf
cloud_stack/nginx/: default.conf
cloud_stack/node-red/: Dockerfile  flows.json  package.json  settings.js
cloud_stack/public/: index.html
cloud_stack/scripts/: api_smoke_test.sh  bootstrap_vm.sh  download_ai_audio.sh  generate_test_wav.py  mqtt_smoke_test.sh  publish_firmware.sh  vision_smoke_test.sh
docs/: DEPLOY.md  index.html  styles.css
docs/assets/media/: README.md
fp_fw_2708/: .gitignore  .projectlinkstore  README.md  app.c  fp_fw_2708.pintool  fp_fw_2708.slcp  fp_fw_2708.slpb  fp_fw_2708.slps  m2m_app_config.h  m2m_dev_board.c  m2m_dev_board.h  psram_egpio_shim.c  sl_i2s_instances.h  sl_si91x_button_instances.c  sl_si91x_button_instances.h  vscode.conf
fp_fw_2708/autogen/: sl_component_catalog.h  sl_event_handler.c
fp_fw_2708/autogen/.slc_state/: .crc_config.crc
fp_fw_2708/autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
fp_fw_2708/cmake_gcc/: CMakeLists.txt  CMakePresets.json  fp_fw_2708.cmake  fp_fw_2708_project.cmake
fp_fw_2708/config/: FreeRTOSConfig.h  RTE_Device_917.h  pin_config.h  sl_board_configuration.h  sl_board_control.h  sl_gpio_board.h  sl_net_default_values.h  sl_si91x_button_init_btn0_config.h  sl_si91x_button_pin_config.h  sl_si91x_debug_uc_config.h  sl_si91x_i2c_init_i2c0_config.h  sl_si91x_i2c_init_i2c2_config.h  sl_si91x_i2s_config.h  sl_si91x_i2s_init_i2s0_config.h  sl_si91x_iostream_log_config.h  sl_si91x_psram_aps6404l_sqh_config.h  sl_si91x_psram_aps6404l_sqrh_config.h  sl_si91x_psram_pin_config.h  sl_si91x_uart_common_config.h  sl_si91x_uart_config.h  sl_si91x_ulp_uart_common_config.h  sl_si91x_ulp_uart_config.h
mcad/: v1.STL  v2.SLDPRT
